--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,39 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.card-container {
+  perspective: 1000px;
+}
+
+.card {
+  width: 95px;
+  height: 132px;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+
+.card.flipped {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+  background-image: url('https://www.deckofcardsapi.com/static/img/back.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.image-back-card {
+  background-image: url('https://www.deckofcardsapi.com/static/img/back.png');
+}
