--- a/src/index.css
+++ b/src/index.css
@@ -86,14 +86,8 @@ body {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.card-container:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.2);
-}
-
 .card {
-  width: 95px;
-  height: 132px;
+  cursor: pointer;
   position: relative;
   transform-style: preserve-3d;
   transition: transform 0.6s;
