--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,27 @@ body {
 .transform {
   transition: transform 0.3s ease;
 }
+
+@keyframes dot-blink {
+  0%,
+  20% {
+    content: '';
+  }
+  40% {
+    content: '.';
+  }
+  60% {
+    content: '..';
+  }
+  80%,
+  100% {
+    content: '...';
+  }
+}
+
+.dot::after {
+  content: '';
+  display: inline-block;
+  width: 1.5em;
+  animation: dot-blink 1.5s steps(4, end) infinite;
+}
